replaced default alt attribute value with accurate values

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Soumya Enterprises</title>
+  <title>About - Enterprises</title>
   <meta name="description" content="Soumya Enterprises - A construction company based in India providing construction, building, and civil engineering services.">
   <meta name="keywords"
     content="soumya enterprises, enterprises, construction, building, civil, civil engineering, construction company">
@@ -113,13 +113,13 @@
 
       <div class="row">
         <div class="col-md-4 probootstrap-animate">
-          <img src="img/img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+          <img src="img/img_sm_4.jpg" alt="PEB Industrial Buildings" class="img-responsive">
         </div>
         <div class="col-md-4 probootstrap-animate">
-          <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+          <img src="img/img_sm_2.jpg" alt="Bitumen Road Construction" class="img-responsive">
         </div>
         <div class="col-md-4 probootstrap-animate">
-          <img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+          <img src="img/img_sm_3.jpg" alt="Water Proofing" class="img-responsive">
         </div>
       </div>
 
