--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Soumya Enterprises</title>
+  <title>Contact - Soumya Enterprises</title>
   <meta name="description" content="Soumya Enterprises - A construction company based in India providing construction, building, and civil engineering services.">
   <meta name="keywords"
     content="soumya enterprises, enterprises, construction, building, civil, civil engineering, construction company">
