--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_1.jpg" alt="Buildings Construction">
               </div>
             </div>
             <div class="text">
@@ -129,7 +129,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_2.jpg" alt="Bitumen Road Construction">
               </div>
             </div>
             <div class="text">
@@ -142,7 +142,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_3.jpg" alt="Water Proofing">
               </div>
             </div>
             <div class="text">
@@ -157,7 +157,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_4.jpg" alt="PEB Industrial Buildings">
               </div>
             </div>
             <div class="text">
@@ -170,7 +170,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_5.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_5.jpg" alt="Vacuum Dewatered Flooring">
               </div>
             </div>
             <div class="text">
@@ -183,7 +183,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_6.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_6.jpg" alt="Industrial Flooring">
               </div>
             </div>
             <div class="text">
@@ -207,19 +207,19 @@
     </div>
     <div class="owl-carousel owl-work probootstrap-animate">
       <div class="item">
-          <img src="img/work_1.jpg" alt="Free Bootstrap Template by uicookies.com">
+          <img src="img/work_1.jpg" alt="Work Image">
       </div>
       <div class="item">
-          <img src="img/work_2.jpg" alt="Free Bootstrap Template by uicookies.com">
+          <img src="img/work_2.jpg" alt="Work Image">
       </div>
       <div class="item">
-          <img src="img/work_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+          <img src="img/work_3.jpg" alt="Work Image">
       </div>
       <div class="item">
-          <img src="img/work_4.jpg" alt="Free Bootstrap Template by uicookies.com">
+          <img src="img/work_4.jpg" alt="Work Image">
       </div>
       <div class="item">
-          <img src="img/work_5.jpg" alt="Free Bootstrap Template by uicookies.com">
+          <img src="img/work_5.jpg" alt="Work Image">
       </div>
     </div>
   </section>
