--- a/services.html
+++ b/services.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Soumya Enterprises</title>
-  <meta name="description" content="Soumya Enterprises - A construction company based in India providing construction, building, and civil engineering services.">
+  <title>Services - Soumya Enterprises</title>
+  <meta name="description"
+    content="Soumya Enterprises - A construction company based in India providing construction, building, and civil engineering services.">
   <meta name="keywords"
     content="soumya enterprises, enterprises, construction, building, civil, civil engineering, construction company">
 
@@ -83,7 +84,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_1.jpg" alt="Buildings Construction">
               </div>
             </div>
             <div class="text">
@@ -96,7 +97,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_2.jpg" alt="Bitumen Road Construction">
               </div>
             </div>
             <div class="text">
@@ -109,7 +110,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_3.jpg" alt="Water Proofing">
               </div>
             </div>
             <div class="text">
@@ -124,7 +125,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_4.jpg" alt="PEB Industrial Buildings">
               </div>
             </div>
             <div class="text">
@@ -137,7 +138,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_5.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_5.jpg" alt="Vacuum Dewatered Flooring">
               </div>
             </div>
             <div class="text">
@@ -150,7 +151,7 @@
           <div class="probootstrap-service-2 probootstrap-animate">
             <div class="image">
               <div class="image-bg">
-                <img src="img/img_sm_6.jpg" alt="Free Bootstrap Template by uicookies.com">
+                <img src="img/img_sm_6.jpg" alt="Industrial Flooring">
               </div>
             </div>
             <div class="text">
