added portfolio and vision, mission

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -201,7 +202,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 section-heading text-center probootstrap-animate">
-          <h2>Portfolio</h2>
+          <a href="portfolio.html">
+            <h2>Portfolio</h2>
+          </a>
         </div>
       </div>
     </div>
@@ -220,6 +223,50 @@
       </div>
       <div class="item">
           <img src="img/work_5.jpg" alt="Work Image">
+      </div>
+    </div>
+  </section>
+
+  <section class="probootstrap-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 section-heading probootstrap-animate">
+          <h2>We Focus on:</h2>
+          <p>
+            <ul class="probootstrap-list">
+              <li><i class="icon-check"></i> World Population Growth</li>
+              <li><i class="icon-check"></i> Economic Globalization</li>
+              <li><i class="icon-check"></i> Quality</li>
+              <li><i class="icon-check"></i> Timely Completion Value of Contract</li>
+              <li><i class="icon-check"></i> Healthy Safety Practices</li>
+              <li><i class="icon-check"></i> Sustainable Resource Management</li>
+              <li><i class="icon-check"></i> Utilization of Natural Resources</li>
+              <li><i class="icon-check"></i> Flexible Real Estate use</li>
+              <li><i class="icon-check"></i> Emergence of New Markets</li>
+              <li><i class="icon-check"></i> Environment Pollution</li>
+              <li><i class="icon-check"></i> Resource Exploitation</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 section-heading probootstrap-animate">
+          <h2>Our Mission</h2>
+          <p>
+            <ul class="probootstrap-list">
+              <li><i class="icon-check"></i> Integrated planning the new buzz word is a challenge and an opportunity for architect and engineer.</li>
+              <li><i class="icon-check"></i> Building in harmony with what the environment has to offer that in cooperating planted are building with wind, sun & water is a fascinating challenge that may lead to innovative architectural solutions.</li>
+              <li><i class="icon-check"></i> Ideally integrating planning concepts should improve the life cycle of a building.</li>
+              <li><i class="icon-check"></i> The development of building and building systems has been characterized for many years by linear thinking and planning.</li>
+              <li><i class="icon-check"></i> To ensure quality construction by correlating and integrating different disciplines with proper documentation.</li>
+              <li><i class="icon-check"></i> To provide a one stop solution to all construction needs and satisfy the specific needs of the client.</li>
+              <li><i class="icon-check"></i> To be the most preferred company in the Industrial construction sector.</li>
+              <li><i class="icon-check"></i> To ensure that the project is delivered on time as required by the client.</li>
+            </ul>
+          </p>
+        </div>
       </div>
     </div>
   </section>
