added completed projects details

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,24 +78,20 @@
               <div class="gutter-sizer"></div>
               <h1 class="text-center">Completed Projects</h1>
               <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
+                  <img src="img/work_1.jpg" alt="Jai Jeevan Jai Kishan Trust Building, ITO New Delhi" />
+                  <p class="project-title">Jai Jeevan Jai Kishan Trust Building, ITO New Delhi</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_2.jpg" alt="The True Friends Group Housing Society, Dwarka New Delhi" />
+                  <p class="project-title">The True Friends Group Housing Society, Dwarka New Delhi</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_4.jpg" alt="G+6 Manipur Bhavan at Dwarka Sector 19" />
+                  <p class="project-title">G+6 Manipur Bhavan at Dwarka Sector 19</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_5.jpg" alt="Mes Project at 505 Delhi Cantt" />
+                  <p class="project-title">Mes Project at 505 Delhi Cantt</p>
               </div>
             </div>
           </div>
@@ -112,24 +108,20 @@
               <div class="gutter-sizer"></div>
               <h1 class="text-center">Ongoing Projects</h1>
               <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_2.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_3.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
-              </div>
-              <div class="portfolio-grid-item probootstrap-animate">
-                <a href="portfolio-single.html" class="probootstrap-gallery-item">
-                  <img src="img/gal_img_sm_4.jpg" alt="Free Bootstrap Template by uicookies.com" />
-                </a>
+                  <img src="img/work_1.jpg" alt="Jai Jeevan Jai Kishan Trust Building, ITO New Delhi" />
+                  <p class="project-title">Jai Jeevan Jai Kishan Trust Building, ITO New Delhi</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_2.jpg" alt="The True Friends Group Housing Society, Dwarka New Delhi" />
+                  <p class="project-title">The True Friends Group Housing Society, Dwarka New Delhi</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_4.jpg" alt="G+6 Manipur Bhavan at Dwarka Sector 19" />
+                  <p class="project-title">G+6 Manipur Bhavan at Dwarka Sector 19</p>
+                </div>
+                <div class="portfolio-grid-item probootstrap-animate">
+                  <img src="img/work_5.jpg" alt="Mes Project at 505 Delhi Cantt" />
+                  <p class="project-title">Mes Project at 505 Delhi Cantt</p>
               </div>
             </div>
           </div>
